Lang Tweaks and register Turkish Lang